--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   animated_text_kit: ^2.1.0
   flutter_native_splash:
   flutter_geofire: ^2.0.0
+  shared_preferences: ^0.5.12
 
 
   # The following adds the Cupertino Icons font to your application.
